--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,17 +1,14 @@
-<header id="header" [class.header_with_menu]="menuVisible()">
-
-  <!-- logo -->
+<header id="header" [class.header_with_menu]="menuIsVisible()">
   <img src="../../../assets/images/main/logo.svg" alt="Paul Scott">
 
   <div class="menu_icon" (click)="toggleMenu()">
-    <div class="menu_icon_bar" [class.rotate]="menuVisible()"></div>
-    <div class="menu_icon_bar" [class.rotate]="menuVisible()"></div>
+    <div class="menu_icon_bar" [class.rotate]="menuIsVisible()"></div>
+    <div class="menu_icon_bar" [class.rotate]="menuIsVisible()"></div>
   </div>
 
-  <!-- links -->
-  <nav [class.menu_height]="menuVisible()">
-    <a (click)="showAboutData()">About Me</a>
-    <a (click)="showProjectData()">Projects</a>
+  <nav [class.menu_height]="menuIsVisible()">
+    <a (click)="showAboutPage()">About Me</a>
+    <a (click)="showProjectPage()">Projects</a>
     <a href="https://drive.google.com/open?id=1Z79TNs30ttAftoWwJbqm93X77OljiM3L" target="_blank" (click)="closeMenu()">Resume</a>
     <a href="https://www.linkedin.com/in/paul-scott-047858140/" target="_blank" (click)="closeMenu()">LinkedIn</a>
     <a href="https://github.com/PScottZero" target="_blank" (click)="closeMenu()">GitHub</a>
