--- a/src/app/components/content/content.component.css
+++ b/src/app/components/content/content.component.css
@@ -4,6 +4,16 @@ h1 {
   color: whitesmoke;
 }
 
+.description {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 0.5em 0;
+  background: #333333dd;
+  text-align: center;
+  color: whitesmoke;
+}
+
 .footer {
   display: flex;
   justify-content: center;
@@ -16,6 +26,29 @@ h1 {
   font-size: 20px;
 }
 
+.info {
+  position: relative;
+  flex: calc(50% - 3em);
+  max-width: calc(50% - 3em);
+  display: block;
+  line-height: 1.5;
+  height: 20em;
+  float: bottom;
+  margin: 1.5em;
+  flex-grow: 1;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.7);
+  border-radius: 2em;
+  overflow: hidden;
+}
+@media screen and (max-width: 700px) {
+  .info {
+    flex: 100%;
+    max-width: 100%;
+    box-shadow: none;
+    margin: 0.5em 0;
+  }
+}
+
 .info_group {
   display: flex;
   margin: auto;
@@ -23,6 +56,10 @@ h1 {
   justify-content: center;
   align-content: center;
   flex-wrap: wrap;
+}
+
+.project_link:hover {
+  box-shadow: 0 0 20px #00C8FF;
 }
 
 .section_title {
