--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -29,7 +29,8 @@ header img {
 @media screen and (min-width: 700px) {
   nav {
     float: right;
-    line-height: 4em;
+    line-height: 4.2em;
+    height: 100%;
   }
 }
 @media screen and (max-width: 700px) {
@@ -52,6 +53,9 @@ header img {
   background: #00C8FFaa;
   backdrop-filter: blur(10px);
   /* firefox only */
+}
+.header_scroll a {
+  text-shadow: none !important;
 }
 @-moz-document url-prefix() {
   .header_scroll {
