--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap';
+@import 'https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap';
 
 * {
   padding: 0;
@@ -10,6 +10,6 @@ body {
   width: 100%;
   height: 100%;
   text-align: center;
-  font-family: 'Lexend Deca', Arial, serif;
+  font-family: 'Comfortaa', Arial, serif;
   background: #1e2224;
 }
