--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,8 +2,8 @@
   <img src="../../../assets/images/logo.svg" alt="Paul Scott">
 
   <div class="menu_icon" (click)="toggleMenu()">
-    <div class="menu_icon_bar" [class.rotate]="menuIsVisible()"></div>
-    <div class="menu_icon_bar" [class.rotate]="menuIsVisible()"></div>
+    <div class="menu_icon_bar" [class.merge]="menuIsVisible()"></div>
+    <div class="menu_icon_bar" [class.merge]="menuIsVisible()"></div>
   </div>
 
   <nav [class.menu_height]="menuIsVisible()">
