--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -26,8 +26,8 @@ header {
 
   img {
     float: left;
-    height: 4em;
-    margin-left: 0.3em;
+    height: 3em;
+    margin: 0.5em 0 0.5em 1em;
   }
 }
 
@@ -83,7 +83,7 @@ nav {
     float: right;
     height: 2em;
     width: 2em;
-    margin: 1em 1em;
+    margin: 1em 1em 1em 0;
   }
 }
 
@@ -92,6 +92,7 @@ nav {
   height: 0.2em;
   background: white;
   transition: 0.3s;
+  border-radius: 0.2em;
 
   &:nth-child(1) {
     margin-top: .6em;
@@ -110,7 +111,7 @@ nav {
   }
 }
 
-.rotate {
+.merge {
   &:nth-child(1) {
     transform: translate(0, 0.3em);
   }
