--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-header></app-header>
-<div class="header-img">
-  <img src="assets/images/profile.png" alt="Picture of me :)">
-</div>
+<app-header-background></app-header-background>
 <app-content></app-content>
