--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -14,11 +14,16 @@
 
 .info_group {
   display: flex;
+  box-sizing: border-box;
   margin: auto;
-  max-width: 90em;
+  max-width: 100%;
   justify-content: center;
   align-content: center;
   flex-wrap: wrap;
+
+  @media screen and (min-width: $mobile-cutoff) {
+    padding: 1vw;
+  }
 }
 
 .section_title {
@@ -35,12 +40,11 @@
 
 app-info {
   position: relative;
-  flex: calc(50% - 3em);
-  max-width: calc(50% - 3em);
+  flex: 33%;
+  max-width: calc(33% - 1vw);
   line-height: 1.5;
-  height: 28em;
-  margin: 1.5em;
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.70);
+  height: 20vw;
+  margin: 0.5vw;
   border-radius: 2em;
   overflow: hidden;
   transition: 0.2s;
@@ -48,6 +52,7 @@ app-info {
   @media screen and (max-width: $mobile-cutoff) {
     flex: 100%;
     max-width: 100%;
+    height: 20em;
     box-shadow: none;
     margin: 0.5em 0;
   }
