--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,20 +1,5 @@
 @import '../../../variables';
 
-a {
-  color: white;
-  transition: 0.3s;
-  margin: 0 0.8em;
-  text-decoration: none;
-  font-size: 20px;
-  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
-
-  &:hover {
-    color: #CCC;
-    transition: 0.3s;
-  }
-}
-
 header {
   z-index: 2;
   position: fixed;
@@ -23,6 +8,7 @@ header {
   height: 4em;
   transition: 0.3s;
   background: transparent;
+  overflow: hidden;
 
   img {
     float: left;
@@ -34,7 +20,6 @@ header {
 nav {
   @media screen and (min-width: $mobile-cutoff) {
     float: right;
-    line-height: 4.2em;
     height: 100%;
   }
 
@@ -44,13 +29,6 @@ nav {
     transition: 0.3s;
     overflow: hidden;
     border-radius: 0 0 1em 1em;
-
-    a {
-      display: block;
-      width: 100%;
-      font-size: 20px;
-      margin: 1em 0;
-    }
   }
 }
 
@@ -70,7 +48,7 @@ nav {
 }
 
 .header_with_menu {
-  height: 24em;
+  height: $header-height * 2;
   border-radius: 0 0 3em 3em;
 }
 
@@ -113,10 +91,10 @@ nav {
 
 .merge {
   &:nth-child(1) {
-    transform: translate(0, 0.3em);
+    transform: translate(0, 0.3em) rotate(45deg);
   }
 
   &:nth-child(2) {
-    transform: translate(0, -0.3em);
+    transform: translate(0, -0.3em) rotate(-45deg);
   }
 }
