--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -9,8 +9,4 @@
     </app-info>
   </div>
 </div>
-<div class="footer">
-  <p>Created by Paul Scott using Angular</p>
-  <p>Call at (215) 880-9592 or email at pauljscott8@gmail.com</p>
-  <p>Last updated 13 September 2020</p>
-</div>
+<app-footer></app-footer>
