--- a/src/app/components/header-background/header-background.component.html
+++ b/src/app/components/header-background/header-background.component.html
@@ -2,9 +2,9 @@
   <div id="header-info">
     <img src="assets/images/profile.jpg" alt="Picture of me :)">
     <p id="about">
-      Hello! My name is Paul Scott. I am a senior studying
-      computer science at Penn State University. My interests are in the fields
-      of Software Engineering, Machine Learning, and Quantum Computing.
+      Hello! My name is Paul Scott. I am a senior at Penn State studying
+      computer science. My interests are in the fields of Software Engineering,
+      Machine Learning, and Quantum Computing.
     </p>
   </div>
 </div>
