--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -1,17 +1,5 @@
 @import '../../../variables';
 
-.footer {
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  flex-direction: column;
-  height: 12em;
-  line-height: 1.5;
-  color: #999999;
-  font-weight: bold;
-  font-size: 20px;
-}
-
 .info_group {
   display: flex;
   box-sizing: border-box;
@@ -49,10 +37,15 @@ app-info {
   overflow: hidden;
   transition: 0.2s;
 
+  @media screen and (max-width: $tablet-cutoff) {
+    flex: 50%;
+    max-width: calc(50% - 1vw);
+    height: 20em;
+  }
+
   @media screen and (max-width: $mobile-cutoff) {
     flex: 100%;
     max-width: 100%;
-    height: 20em;
     box-shadow: none;
     margin: 0.5em 0;
   }
