--- a/src/app/components/header-background/header-background.component.scss
+++ b/src/app/components/header-background/header-background.component.scss
@@ -21,7 +21,8 @@
   transform: translate(-50%, -50%);
   max-width: 64em;
   width: 100%;
-  height: 24em;
+  height: 40vh;
+  padding: 2em;
   line-height: 1.5;
 
   img {
@@ -31,7 +32,7 @@
 
   #about {
     margin-top: 0.5em;
-    font-size: 28px;
+    font-size: 2.5vh;
     color: white;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
   }
