--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,8 +1,8 @@
 <div *ngFor="let infoGroup of getPageInfo()">
-  <div class="section_title">
+  <div class="section-title">
     <p>{{infoGroup.title}}</p>
   </div>
-  <div class="info_group">
+  <div class="info-group">
     <app-info *ngFor="let info of infoGroup.infoArray"
               [title]="info.title" [description]="info.description"
               [image]="info.backgroundImage" [link]="info.projectLink">
