--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,3 +1,15 @@
+/* colors */
+$body-color: #1e2224;
+$footer-text-color: #999999;
+$header-color: #00C8FFaa;
+$header-color-firefox: #00C8FFdd;
+$description-background: #333333dd;
+
+/* font */
+$font-stack: 'Comfortaa', Arial, serif;
+
+/* sizing */
 $header-height: 4em;
+$footer-height: 12em;
 $mobile-cutoff: 768px;
 $tablet-cutoff: 1024px;
