--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -1,6 +1,6 @@
 @import '../../../variables';
 
-.info_group {
+.info-group {
   display: flex;
   box-sizing: border-box;
   margin: auto;
@@ -14,7 +14,7 @@
   }
 }
 
-.section_title {
+.section-title {
   padding: 2em 0 0.3em 0;
   font-size: 42px;
   color: whitesmoke;
