--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -49,33 +49,33 @@ header img {
   }
 }
 
-.header_scroll {
+.header-scroll {
   background: #00C8FFaa;
   backdrop-filter: blur(10px);
   /* firefox only */
 }
-.header_scroll a {
+.header-scroll a {
   text-shadow: none !important;
 }
 @-moz-document url-prefix() {
-  .header_scroll {
+  .header-scroll {
     background: #00C8FF !important;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
   }
 }
 
-.header_with_menu {
+.header-with-menu {
   height: 24em;
   border-radius: 0 0 3em 3em;
 }
 
 @media screen and (min-width: 700px) {
-  .menu_icon {
+  .menu-icon {
     display: none;
   }
 }
 @media screen and (max-width: 700px) {
-  .menu_icon {
+  .menu-icon {
     float: right;
     height: 2em;
     width: 2em;
@@ -83,30 +83,30 @@ header img {
   }
 }
 
-.menu_icon_bar {
+.menu-icon-bar {
   width: 100%;
   height: 0.2em;
   background: white;
   transition: 0.3s;
 }
-.menu_icon_bar:nth-child(1) {
+.menu-icon-bar:nth-child(1) {
   margin-top: 0.6em;
 }
-.menu_icon_bar:nth-child(2) {
+.menu-icon-bar:nth-child(2) {
   margin-top: 0.4em;
 }
 
-.menu_height {
+.menu-expanded-height {
   height: 18em;
 }
-.menu_height a {
+.menu-expanded-height a {
   margin: 1.5em 0;
 }
 
-.merge:nth-child(1) {
+.to-x-mark:nth-child(1) {
   transform: translate(0, 0.3em);
 }
-.merge:nth-child(2) {
+.to-x-mark:nth-child(2) {
   transform: translate(0, -0.3em);
 }
 
