--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,10 @@
-<header id="header" [class.header_with_menu]="menuIsVisible">
+<header id="header" [class.header-with-menu]="menuIsVisible">
   <img src="../../../assets/images/logo.svg" alt="Paul Scott">
-  <div class="menu_icon" (click)="toggleMenu()">
-    <div class="menu_icon_bar" [class.merge]="menuIsVisible"></div>
-    <div class="menu_icon_bar" [class.merge]="menuIsVisible"></div>
+  <div class="menu-icon" (click)="toggleMenu()">
+    <div class="menu-icon-bar" [class.to-x-mark]="menuIsVisible"></div>
+    <div class="menu-icon-bar" [class.to-x-mark]="menuIsVisible"></div>
   </div>
-  <nav [class.menu_height]="menuIsVisible">
+  <nav [class.menu-expanded-height]="menuIsVisible">
     <app-icon-button *ngFor="let button of buttons" [icon]="button.icon" [link]="button.link"></app-icon-button>
   </nav>
 </header>
