--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,7 +1,8 @@
 <div id="info" [ngStyle]="{'background': 'url(' + image + ') center', 'background-size': 'cover'}"
-     [class.project_link]="link != undefined" (click)="open(link)">
+     [class.info-link]="link !== undefined" (click)="open(link)">
   <div class="description">
     <h1>{{title}}</h1>
     <p>{{description}}</p>
+    <img class="link-icon" src="assets/icons/link.svg" alt="link" *ngIf="link !== undefined">
   </div>
 </div>
