--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import 'https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap';
+@import 'variables';
 
 * {
   padding: 0;
@@ -15,6 +16,6 @@ body {
   width: 100%;
   height: 100%;
   text-align: center;
-  font-family: 'Comfortaa', Arial, serif;
-  background: #1e2224;
+  font-family: $font-stack;
+  background: $body-color;
 }
