added videos section

--- a/src/app/components/header-background/header-background.component.html
+++ b/src/app/components/header-background/header-background.component.html
@@ -4,7 +4,7 @@
     <p id="about">
       Hello! My name is Paul Scott. I am a senior at Penn State studying
       computer science. My interests are in the fields of Software Engineering,
-      Machine Learning, and Quantum Computing.
+      Artificial Intelligence, Machine Learning, and Quantum Computing.
     </p>
   </div>
 </div>
