--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -6,7 +6,12 @@ h1 {
   color: whitesmoke;
 }
 
-#info {
+iframe {
+  width: 100%;
+  height: 100%;
+}
+
+.info {
   width: 100%;
   height: 100%;
 }
