--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,9 @@
   <p>Created by Paul Scott using Angular</p>
   <p>
     Call at (215) 880-9592 or email at
-    <a href="mailto: pauljscott8@gmail.com" target="_blank">pauljscott8@gmail.com</a>
+    <a href="mailto: pauljscott8@gmail.com" target="_blank"
+      >pauljscott8@gmail.com</a
+    >
   </p>
-  <p>Last updated {{day}} {{month}} {{year}}</p>
+  <p>Last updated {{ day }} {{ month }} {{ year }}</p>
 </div>
