--- a/src/app/components/header-background/header-background.component.html
+++ b/src/app/components/header-background/header-background.component.html
@@ -1,6 +1,6 @@
 <div id="header-background">
   <div id="header-info">
-    <img src="assets/images/profile.jpg" alt="Picture of me :)">
+    <img src="assets/images/profile.jpg" alt="Picture of me :)" />
     <p id="about">
       Hello! My name is Paul Scott. I am a senior at Penn State studying
       computer science. My interests are in the fields of Software Engineering,
