--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -73,11 +73,11 @@ nav {
   border-radius: 0.2em;
 
   &:nth-child(1) {
-    margin-top: .6em;
+    margin-top: 0.6em;
   }
 
   &:nth-child(2) {
-    margin-top: .4em;
+    margin-top: 0.4em;
   }
 }
 
