--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,12 +1,29 @@
-<div *ngIf="!image.includes('youtube')" class="info" [ngStyle]="{'background': 'url(' + image + ') center', 'background-size': 'cover'}"
-     [class.info-link]="link !== undefined" (click)="open(link)">
+<div
+  *ngIf="!image.includes('youtube')"
+  class="info"
+  [ngStyle]="{
+    background: 'url(' + image + ') center',
+    'background-size': 'cover'
+  }"
+  [class.info-link]="link !== undefined"
+  (click)="open(link)"
+>
   <div class="description">
-    <h1>{{title}}</h1>
-    <p>{{description}}</p>
-    <img class="link-icon" src="assets/icons/link.svg" alt="link" *ngIf="link !== undefined">
+    <h1>{{ title }}</h1>
+    <p>{{ description }}</p>
+    <img
+      class="link-icon"
+      src="assets/icons/link.svg"
+      alt="link"
+      *ngIf="link !== undefined"
+    />
   </div>
 </div>
 
 <div *ngIf="image.includes('youtube')" class="info">
-  <iframe [src]="image | sanitize" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe
+    [src]="image | sanitize"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen
+  ></iframe>
 </div>
