--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
   height: 100%;
   text-align: center;
-  font-family: "Comfortaa", Arial, serif;
+  font-family: 'Comfortaa', Arial, serif;
   background: #1e2224;
 }
 
