--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let infoGroup of getPageInfo()">
+<div *ngFor="let infoGroup of pageData">
   <div class="section-title">
     <p>{{ infoGroup.title }}</p>
   </div>
