--- a/src/app/components/header-background/header-background.component.html
+++ b/src/app/components/header-background/header-background.component.html
@@ -2,9 +2,10 @@
   <div id="header-info">
     <img src="assets/images/profile.jpg" alt="Picture of me :)" />
     <p id="about">
-      Hello! My name is Paul Scott. I am a senior at Penn State studying
-      computer science. My interests are in the fields of Software Engineering,
-      Artificial Intelligence, Machine Learning, and Quantum Computing.
+      Hello! My name is Paul Scott. I am an incoming CIS MSE at
+      the University of Pennsylvania. I am currently a computer science
+      major at Penn State. My areas of interests are artificial intelligence,
+      machine learning, software engineering, and web development.
     </p>
   </div>
 </div>
