--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -10,7 +10,7 @@
 >
   <div class="description">
     <h1>{{ title }}</h1>
-    <p>{{ description }}</p>
+    <div [innerHTML]="description"></div>
     <img
       class="link-icon"
       src="assets/icons/link.svg"
