--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,9 +1,9 @@
 /* colors */
-$body-color: #1e2224;
+$body-color: #0e0f0f;
 $footer-text-color: #999999;
 $header-color: #00c8ffaa;
 $header-color-firefox: #00c8ffcc;
-$description-background: #333333dd;
+$description-background: #242424dd;
 
 /* font */
 $font-stack: 'Comfortaa', Arial, serif;
