--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,8 +1,8 @@
 /* colors */
-$body-color: #0e0f0f;
+$body-color: #101010;
 $footer-text-color: #999999;
-$header-color: #00c8ffaa;
-$header-color-firefox: #00c8ffcc;
+$header-color: #0082d9aa;
+$header-color-firefox: #0082d9cc;
 $description-background: #242424dd;
 
 /* font */
