--- a/src/app/components/header-background/header-background.component.html
+++ b/src/app/components/header-background/header-background.component.html
@@ -4,7 +4,7 @@
     <p id="about">
       Hello! My name is Paul Scott. I am an incoming CIS MSE at
       the University of Pennsylvania. I am currently a computer science
-      major at Penn State. My areas of interests are artificial intelligence,
+      major at Penn State. My areas of interest are artificial intelligence,
       machine learning, software engineering, and web development.
     </p>
   </div>
