--- a/src/app/components/header-background/header-background.component.html
+++ b/src/app/components/header-background/header-background.component.html
@@ -1,11 +1,17 @@
-<div id="header-background">
+<div
+  id="header-background"
+  [ngStyle]="{
+    background: 'url(assets/images/header.jpg) bottom',
+    'background-size': 'cover'
+  }"
+>
   <div id="header-info">
     <img src="assets/images/profile.jpg" alt="Picture of me :)" />
     <p id="about">
-      Hello! My name is Paul Scott. I am an incoming CIS MSE at
-      the University of Pennsylvania. I am currently a computer science
-      major at Penn State. My areas of interest are artificial intelligence,
-      machine learning, software engineering, and web development.
+      Hello! My name is Paul Scott. I am an incoming CIS MSE at the University
+      of Pennsylvania. I am currently a computer science major at Penn State. My
+      areas of interest are artificial intelligence, machine learning, software
+      engineering, and web development.
     </p>
   </div>
 </div>
