--- a/src/app/components/header-background/header-background.component.html
+++ b/src/app/components/header-background/header-background.component.html
@@ -2,16 +2,17 @@
   id="header-background"
   [ngStyle]="{
     background: 'url(assets/images/header.jpg) bottom',
-    'background-size': 'cover'
+    'background-size': 'cover',
+    'background-repeat': 'no-repeat'
   }"
 >
   <div id="header-info">
     <img src="assets/images/profile.jpg" alt="Picture of me :)" />
     <p id="about">
       Hello! My name is Paul Scott. I am an incoming CIS MSE at the University
-      of Pennsylvania. I am currently a computer science major at Penn State. My
-      areas of interest are artificial intelligence, machine learning, software
-      engineering, and web development.
+      of Pennsylvania. I graduated from Penn State with a BS in Computer
+      Science. My areas of interest are artificial intelligence, machine
+      learning, software engineering, and web development.
     </p>
   </div>
 </div>
