--- a/src/app/components/header-background/header-background.component.html
+++ b/src/app/components/header-background/header-background.component.html
@@ -1,7 +1,7 @@
 <div
   id="header-background"
   [ngStyle]="{
-    background: 'url(assets/images/header.jpg) bottom',
+    background: 'url(assets/images/fakurian-design-E8Ufcyxz514-unsplash.jpg) center',
     'background-size': 'cover',
     'background-repeat': 'no-repeat'
   }"
