--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 @import 'https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap';
-@import 'variables';
+@import 'app/styles/variables.scss';
 
 * {
   padding: 0;
