--- a/src/app/components/header-background/header-background.component.html
+++ b/src/app/components/header-background/header-background.component.html
@@ -1,11 +1,4 @@
-<div
-  id="header-background"
-  [ngStyle]="{
-    background: 'url(assets/images/fakurian-design-E8Ufcyxz514-unsplash.jpg) center',
-    'background-size': 'cover',
-    'background-repeat': 'no-repeat'
-  }"
->
+<div id="header-background">
   <div id="header-info">
     <img src="assets/images/profile.jpg" alt="Picture of me :)" />
     <p id="about">
