--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -3,7 +3,7 @@
 h1 {
   font-size: 24px;
   font-weight: normal;
-  color: whitesmoke;
+  color: white;
 }
 
 iframe {
@@ -24,7 +24,7 @@ iframe {
   padding: 0.5em 1em;
   background: $description-background;
   text-align: center;
-  color: whitesmoke;
+  color: white;
 }
 
 .link-icon {
