--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables.scss';
+@import '../../styles/mixins.scss';
 
 header {
   z-index: 2;
@@ -18,12 +19,12 @@ header {
 }
 
 nav {
-  @media screen and (min-width: $mobile-cutoff) {
+  @include largerThanPhone {
     float: right;
     height: 100%;
   }
 
-  @media screen and (max-width: $mobile-cutoff) {
+  @include phone {
     height: 0;
     width: 100%;
     transition: 0.3s;
@@ -35,11 +36,6 @@ nav {
 .header-scroll {
   background: $header-color;
   backdrop-filter: blur(10px);
-
-  /* firefox only */
-  @-moz-document url-prefix() {
-    background: $header-color-firefox !important;
-  }
 }
 
 .header-with-menu {
@@ -48,11 +44,11 @@ nav {
 }
 
 .menu-icon {
-  @media screen and (min-width: $mobile-cutoff) {
+  @include largerThanPhone {
     display: none;
   }
 
-  @media screen and (max-width: $mobile-cutoff) {
+  @include phone {
     float: right;
     height: 2em;
     width: 2em;
@@ -63,7 +59,7 @@ nav {
 .menu-icon-bar {
   width: 100%;
   height: 0.2em;
-  background: white;
+  background: #101010;
   transition: 0.3s;
   border-radius: 0.2em;
 
