--- a/src/app/components/icon-button/icon-button.component.scss
+++ b/src/app/components/icon-button/icon-button.component.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables.scss';
+@import '../../styles/mixins.scss';
 
 button {
   height: 100%;
@@ -14,7 +15,7 @@ button {
     height: 100%;
   }
 
-  @media screen and (min-width: $mobile-cutoff) {
+  @include largerThanPhone {
     &:hover {
       cursor: pointer;
       filter: brightness(80%);
@@ -22,7 +23,7 @@ button {
     }
   }
 
-  @media screen and (max-width: $mobile-cutoff) {
+  @include phone {
     height: $header-height;
     padding: 0.7em;
   }
