--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,9 +1,9 @@
 /* colors */
 $body-color: #101010;
 $footer-text-color: #999999;
-$header-color: #07aee5aa;
-$header-color-firefox: #07aee5cc;
-$description-background: #242424dd;
+$primary-color: #a0bfeb;
+$header-color: #a0bfebcc;
+$description-background: #242424cc;
 
 /* font */
 $font-stack: 'Comfortaa', Arial, serif;
