--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -59,7 +59,7 @@ nav {
 .menu-icon-bar {
   width: 100%;
   height: 0.2em;
-  background: #101010;
+  background: $body-color;
   transition: 0.3s;
   border-radius: 0.2em;
 
