--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -6,6 +6,8 @@ $header-color: #a0bfebcc;
 $description-background: #242424cc;
 
 /* font */
+$font-large: 36px;
+$font-medium: 24px;
 $font-stack: 'Comfortaa', Arial, serif;
 
 /* sizing */
