--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <div *ngFor="let infoGroup of pageData">
+  <div *ngFor="let infoGroup of pageData; let i = index">
     <div class="section-title">
       <p>{{ infoGroup.groupName }}</p>
     </div>
@@ -10,11 +10,12 @@
         [description]="info.description"
         [img]="'assets/images/' + infoGroup.groupImgDir + '/' + info.img"
         [link]="info.link"
+        [hideDescription]="info.shrinkForMobile"
         [style.--flex-large]="getLargeFlex(infoGroup.columnCount)"
         [style.--flex-small]="getSmallFlex(infoGroup.columnCount)"
       >
       </app-info>
     </div>
   </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
