--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -2,8 +2,12 @@
 @import '../../styles/mixins.scss';
 
 .content {
+  @include phone {
+    padding: 0.5rem 0;
+  }
+
   @include largerThanPhone {
-    padding: 0.5rem 1rem 0 1rem;
+    padding: 0.5vw;
   }
 }
 
@@ -11,23 +15,21 @@
   @include flexCenter;
   flex-wrap: wrap;
   box-sizing: border-box;
-  width: 100% !important;
+  width: 100%;
+  height: 100%;
 }
 
 .section-title {
-  box-sizing: border-box;
-  font-size: 42px;
-  border: 2px solid $primary-color;
-  color: #a0bfeb;
-  border-radius: 2rem;
+  @include blueBorder;
+  font-size: $font-large;
   padding: 2rem;
-  margin: 1rem 0.5vw;
+  margin: 0.5vw;
   width: calc(100% - 1vw);
 
   @include phone {
     padding: 1rem;
-    font-size: 32px;
-    border-radius: 1.5rem;
+    margin: 0.5rem 0;
+    width: 100%;
   }
 }
 
