--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -8,7 +8,7 @@
   [class.info-link]="link !== undefined"
   (click)="open(link)"
 >
-  <div class="description">
+  <div class="description" *ngIf="hideDescription">
     <h1>{{ title }}</h1>
     <div [innerHTML]="description"></div>
     <img
