--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 h1 {
-  font-size: 24px;
+  font-size: $font-medium;
   font-weight: normal;
   color: white;
 }
