--- a/src/app/styles/mixins.scss
+++ b/src/app/styles/mixins.scss
@@ -23,3 +23,10 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin blueBorder {
+  box-sizing: border-box;
+  color: $primary-color;
+  border: 2px solid $primary-color;
+  border-radius: 2rem;
+}
