--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -3,11 +3,12 @@ $body-color: #101010;
 $footer-text-color: #999999;
 $primary-color: #a0bfeb;
 $header-color: #a0bfebcc;
-$description-background: #242424cc;
+$description-background: #2d3644cc;
 
 /* font */
 $font-large: 36px;
-$font-medium: 24px;
+$font-medium: 22px;
+$font-small: 18px;
 $font-stack: 'Comfortaa', Arial, serif;
 
 /* sizing */
