--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,10 @@
 <div class="footer">
-  <p>Created by Paul Scott using Angular</p>
   <p>
     Call at (215) 880-9592 or email at
     <a href="mailto: pauljscott8@gmail.com" target="_blank"
       >pauljscott8@gmail.com</a
     >
   </p>
-  <p>Last updated 12 August 2021</p>
+  <p>Created using Angular</p>
+  <p>Last updated 19 August 2021</p>
 </div>
