--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   line-height: 1.5;
   font-weight: bold;
-  padding: 2rem;
+  padding: 4rem;
   font-size: $font-medium;
   width: calc(100% - 1vw);
   margin: 0.5vw auto;
@@ -15,6 +15,8 @@
   @include phone {
     width: 100%;
     margin: 0.5rem 0;
+    padding: 4rem 2rem;
+    font-size: $font-small;
   }
 
   a {
