--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -19,9 +19,11 @@ iframe {
 .description {
   box-sizing: border-box;
   position: absolute;
-  bottom: 0;
-  width: 100%;
-  padding: 0.5em 1em;
+  border-radius: 1rem;
+  bottom: 1rem;
+  left: 1rem;
+  width: calc(100% - 2rem);
+  padding: 0.5rem 1rem;
   background: $description-background;
   text-align: center;
   color: white;
@@ -29,8 +31,8 @@ iframe {
 
 .link-icon {
   position: absolute;
-  height: 1.5em;
-  right: 1.5em;
+  height: 1.5rem;
+  right: 1.5rem;
   top: 50%;
   transform: translateY(-50%);
 }
