--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -12,7 +12,7 @@ $font-small: 18px;
 $font-stack: 'Comfortaa', Arial, serif;
 
 /* sizing */
-$header-height: 4em;
-$footer-height: 12em;
+$header-height: 4rem;
+$footer-height: 12rem;
 $mobile-cutoff: 768px;
 $tablet-cutoff: 1200px;
