--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -56,6 +56,6 @@ app-info {
     flex: 100%;
     max-width: 100%;
     height: calc(100vw / 1.2);
-    margin: 0.5em 0;
+    margin: 0.5rem 0;
   }
 }
