--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,15 +6,15 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 4em;
+  height: 4rem;
   transition: 0.3s;
   background: transparent;
   overflow: hidden;
 
   img {
     float: left;
-    height: 3em;
-    margin: 0.5em 0 0.5em 1em;
+    height: 3rem;
+    margin: 0.5rem 0 0.5rem 1rem;
   }
 }
 
@@ -29,7 +29,7 @@ nav {
     width: 100%;
     transition: 0.3s;
     overflow: hidden;
-    border-radius: 0 0 1em 1em;
+    border-radius: 0 0 1rem 1rem;
   }
 }
 
@@ -40,7 +40,7 @@ nav {
 
 .header-with-menu {
   height: $header-height * 2;
-  border-radius: 0 0 3em 3em;
+  border-radius: 0 0 3rem 3rem;
 }
 
 .menu-icon {
@@ -50,42 +50,42 @@ nav {
 
   @include phone {
     float: right;
-    height: 2em;
-    width: 2em;
-    margin: 1em 1em 1em 0;
+    height: 2rem;
+    width: 2rem;
+    margin: 1rem 1rem 1rem 0;
   }
 }
 
 .menu-icon-bar {
   width: 100%;
-  height: 0.2em;
+  height: 0.2rem;
   background: $body-color;
   transition: 0.3s;
-  border-radius: 0.2em;
+  border-radius: 0.2rem;
 
   &:nth-child(1) {
-    margin-top: 0.6em;
+    margin-top: 0.6rem;
   }
 
   &:nth-child(2) {
-    margin-top: 0.4em;
+    margin-top: 0.4rem;
   }
 }
 
 .menu-expanded-height {
-  height: 4em;
+  height: 4rem;
 
   a {
-    margin: 1.5em 0;
+    margin: 1.5rem 0;
   }
 }
 
 .to-x-mark {
   &:nth-child(1) {
-    transform: translate(0, 0.3em) rotate(45deg);
+    transform: translate(0, 0.3rem) rotate(45deg);
   }
 
   &:nth-child(2) {
-    transform: translate(0, -0.3em) rotate(-45deg);
+    transform: translate(0, -0.3rem) rotate(-45deg);
   }
 }
