--- a/src/app/components/icon-button/icon-button.component.scss
+++ b/src/app/components/icon-button/icon-button.component.scss
@@ -3,12 +3,12 @@
 
 button {
   height: 100%;
-  padding: 1em;
+  padding: 1rem;
   background: transparent;
   border: none;
   outline: none;
   transition: 0.2s;
-  margin: 0 1em;
+  margin: 0 1rem;
 
   img {
     float: top;
@@ -25,6 +25,6 @@ button {
 
   @include phone {
     height: $header-height;
-    padding: 0.7em;
+    padding: 0.7rem;
   }
 }
