--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,9 +1,9 @@
 /* colors */
 $body-color: #101010;
 $footer-text-color: #999999;
-$primary-color: #a0bfeb;
-$header-color: #a0bfebcc;
-$description-background: #2d3644cc;
+$primary-color: #00d5ff;
+$header-color: linear-gradient(to right, #00d5ffcc, #5cff82cc);
+$description-background: #00000099;
 
 /* font */
 $font-large: 36px;
