--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables.scss';
+@import '../../styles/mixins.scss';
 
 h1 {
   font-size: $font-medium;
@@ -27,6 +28,10 @@ iframe {
   background: $description-background;
   text-align: center;
   color: white;
+
+  @include phone {
+    font-size: 14px;
+  }
 }
 
 .link-icon {
